@@ -2,6 +2,7 @@
 - Mists of Pandaria Remix: Added a new option 'Show Theads of Time' ('Interface').  If enabled, your character's total Threads of Time will be shown in the character frame next to the average item level.
 - Added the 'Disable bag automation' option ('System') once again.
 - For 'Mount mount sounds', you can now make jewelcrafting panther mounts quieter ('Panthers').
+- For 'Recent chat window', increased the number of recent chat messages shown from 128 to 256.
 
 10.2.28 - 22nd May 2024
 - For 'Enhance minimap', added support for Narcissus custom minimap button.
